--- a/src/TidyWindow.App/Views/EssentialsPage.xaml
+++ b/src/TidyWindow.App/Views/EssentialsPage.xaml
@@ -516,23 +516,28 @@
                                                                Foreground="#94A3B8"
                                                                Margin="0,0,0,6"/>
                                                     <WrapPanel>
-                                                        <CheckBox Content="Run full scan"
+                                                        <CheckBox Style="{StaticResource App.CheckBoxStyle}"
+                                                                  Content="Run full scan"
                                                                   IsChecked="{Binding UseFullScan}"
                                                                   Foreground="#E2E8F0"
                                                                   Margin="0,0,12,6"/>
-                                                        <CheckBox Content="Skip signature update"
+                                                        <CheckBox Style="{StaticResource App.CheckBoxStyle}"
+                                                                  Content="Skip signature update"
                                                                   IsChecked="{Binding SkipSignatureUpdate}"
                                                                   Foreground="#E2E8F0"
                                                                   Margin="0,0,12,6"/>
-                                                        <CheckBox Content="Skip real-time heal"
+                                                        <CheckBox Style="{StaticResource App.CheckBoxStyle}"
+                                                                  Content="Skip real-time heal"
                                                                   IsChecked="{Binding SkipRealtimeHeal}"
                                                                   Foreground="#E2E8F0"
                                                                   Margin="0,0,12,6"/>
-                                                        <CheckBox Content="Skip service repair"
+                                                        <CheckBox Style="{StaticResource App.CheckBoxStyle}"
+                                                                  Content="Skip service repair"
                                                                   IsChecked="{Binding SkipServiceHeal}"
                                                                   Foreground="#E2E8F0"
                                                                   Margin="0,0,12,6"/>
-                                                        <CheckBox Content="Skip threat scan"
+                                                        <CheckBox Style="{StaticResource App.CheckBoxStyle}"
+                                                                  Content="Skip threat scan"
                                                                   IsChecked="{Binding SkipThreatScan}"
                                                                   Foreground="#E2E8F0"
                                                                   Margin="0,0,12,6"/>
@@ -545,23 +550,28 @@
                                                                Foreground="#94A3B8"
                                                                Margin="0,0,0,6"/>
                                                     <WrapPanel>
-                                                        <CheckBox Content="Stop &amp; restart services"
+                                                        <CheckBox Style="{StaticResource App.CheckBoxStyle}"
+                                                                  Content="Stop &amp; restart services"
                                                                   IsChecked="{Binding IncludeServiceReset}"
                                                                   Foreground="#E2E8F0"
                                                                   Margin="0,0,12,6"/>
-                                                        <CheckBox Content="Clear spool queue"
+                                                        <CheckBox Style="{StaticResource App.CheckBoxStyle}"
+                                                                  Content="Clear spool queue"
                                                                   IsChecked="{Binding IncludeQueuePurge}"
                                                                   Foreground="#E2E8F0"
                                                                   Margin="0,0,12,6"/>
-                                                        <CheckBox Content="Remove stale drivers"
+                                                        <CheckBox Style="{StaticResource App.CheckBoxStyle}"
+                                                                  Content="Remove stale drivers"
                                                                   IsChecked="{Binding IncludeDriverCleanup}"
                                                                   Foreground="#E2E8F0"
                                                                   Margin="0,0,12,6"/>
-                                                        <CheckBox Content="Re-register DLLs"
+                                                        <CheckBox Style="{StaticResource App.CheckBoxStyle}"
+                                                                  Content="Re-register DLLs"
                                                                   IsChecked="{Binding IncludeDllRegistration}"
                                                                   Foreground="#E2E8F0"
                                                                   Margin="0,0,12,6"/>
-                                                        <CheckBox Content="Reset isolation policies"
+                                                        <CheckBox Style="{StaticResource App.CheckBoxStyle}"
+                                                                  Content="Reset isolation policies"
                                                                   IsChecked="{Binding IncludeIsolationPolicyReset}"
                                                                   Foreground="#E2E8F0"
                                                                   Margin="0,0,12,6"/>
