--- a/src/TidyWindow.App/App.xaml
+++ b/src/TidyWindow.App/App.xaml
@@ -8,6 +8,7 @@
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="pack://application:,,,/TidyWindow;component/Resources/RegistryOptimizer.xaml"/>
                 <ResourceDictionary Source="pack://application:,,,/TidyWindow;component/Resources/ScrollBars.xaml"/>
+                <ResourceDictionary Source="pack://application:,,,/TidyWindow;component/Resources/CheckBoxes.xaml"/>
             </ResourceDictionary.MergedDictionaries>
             <converters:InverseBooleanConverter x:Key="InverseBooleanConverter"/>
             <converters:BooleanToYesNoConverter x:Key="BooleanToYesNoConverter"/>
