--- a/src/TidyWindow.App/Views/LogsPage.xaml
+++ b/src/TidyWindow.App/Views/LogsPage.xaml
@@ -11,80 +11,6 @@
     <Page.Resources>
         <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
 
-        <ControlTemplate x:Key="LogsComboToggleButtonTemplate"
-                         TargetType="ToggleButton">
-            <Grid>
-                <Border x:Name="ToggleBorder"
-                        Background="#0F172A"
-                        BorderBrush="#1E293B"
-                        BorderThickness="1"
-                        CornerRadius="6"
-                        Padding="8,4"/>
-                <Path Data="M 0 0 L 5 5 L 10 0"
-                      Stroke="#38BDF8"
-                      StrokeThickness="1.5"
-                      HorizontalAlignment="Right"
-                      VerticalAlignment="Center"
-                      Margin="0,0,10,0"/>
-            </Grid>
-            <ControlTemplate.Triggers>
-                <Trigger Property="IsMouseOver"
-                         Value="True">
-                    <Setter TargetName="ToggleBorder"
-                            Property="Background"
-                            Value="#17233C"/>
-                </Trigger>
-                <Trigger Property="IsChecked"
-                         Value="True">
-                    <Setter TargetName="ToggleBorder"
-                            Property="Background"
-                            Value="#132039"/>
-                    <Setter TargetName="ToggleBorder"
-                            Property="BorderBrush"
-                            Value="#38BDF8"/>
-                </Trigger>
-                <Trigger Property="IsPressed"
-                         Value="True">
-                    <Setter TargetName="ToggleBorder"
-                            Property="Background"
-                            Value="#132039"/>
-                    <Setter TargetName="ToggleBorder"
-                            Property="BorderBrush"
-                            Value="#38BDF8"/>
-                </Trigger>
-                <Trigger Property="IsEnabled"
-                         Value="False">
-                    <Setter TargetName="ToggleBorder"
-                            Property="Opacity"
-                            Value="0.5"/>
-                </Trigger>
-            </ControlTemplate.Triggers>
-        </ControlTemplate>
-
-        <Style x:Key="LogsComboBoxItemStyle"
-               TargetType="ComboBoxItem">
-            <Setter Property="Foreground"
-                    Value="#E2E8F0"/>
-            <Setter Property="Background"
-                    Value="Transparent"/>
-            <Setter Property="Padding"
-                    Value="8,4"/>
-            <Style.Triggers>
-                <Trigger Property="IsMouseOver"
-                         Value="True">
-                    <Setter Property="Background"
-                            Value="#1B2942"/>
-                </Trigger>
-                <Trigger Property="IsSelected"
-                         Value="True">
-                    <Setter Property="Background"
-                            Value="#1E3A8A"/>
-                    <Setter Property="Foreground"
-                            Value="#F8FAFC"/>
-                </Trigger>
-            </Style.Triggers>
-        </Style>
-
     <Style x:Key="LogsCardBorderStyle"
            TargetType="Border">
         <Setter Property="Background"
@@ -299,63 +225,7 @@
                                     <ComboBox Margin="0,6,0,0"
                                               ItemsSource="{Binding LevelFilterOptions}"
                                               SelectedItem="{Binding SelectedLevel, Mode=TwoWay}"
-                                              Background="Transparent"
-                                              Foreground="#E2E8F0"
-                                              BorderThickness="0"
-                                              Padding="0">
-                                        <ComboBox.Template>
-                                            <ControlTemplate TargetType="ComboBox">
-                                                <Grid>
-                                                    <ToggleButton x:Name="ToggleButton"
-                                                                  Template="{StaticResource LogsComboToggleButtonTemplate}"
-                                                                  Grid.ColumnSpan="2"
-                                                                  Focusable="False"
-                                                                  IsHitTestVisible="True"
-                                                                  ClickMode="Press"
-                                                                  IsChecked="{Binding IsDropDownOpen, Mode=TwoWay, RelativeSource={RelativeSource TemplatedParent}}"/>
-                                                    <ContentPresenter x:Name="ContentSite"
-                                                                      Margin="14,4,36,4"
-                                                                      VerticalAlignment="Center"
-                                                                      HorizontalAlignment="Left"
-                                                                      RecognizesAccessKey="True"
-                                                                      Content="{TemplateBinding SelectionBoxItem}"/>
-                                                    <Popup x:Name="Popup"
-                                                           Placement="Bottom"
-                                                           AllowsTransparency="True"
-                                                           Focusable="False"
-                                                           IsOpen="{TemplateBinding IsDropDownOpen}"
-                                                           PopupAnimation="Slide">
-                                                        <Border x:Name="PopupBorder"
-                                                                Background="#0F172A"
-                                                                BorderBrush="#1E293B"
-                                                                BorderThickness="1"
-                                                                CornerRadius="6"
-                                                                Padding="4">
-                                                            <ScrollViewer Margin="0"
-                                                                          SnapsToDevicePixels="True">
-                                                                <ItemsPresenter KeyboardNavigation.DirectionalNavigation="Contained"/>
-                                                            </ScrollViewer>
-                                                        </Border>
-                                                    </Popup>
-                                                </Grid>
-                                                <ControlTemplate.Triggers>
-                                                    <Trigger Property="HasItems"
-                                                             Value="False">
-                                                        <Setter TargetName="PopupBorder"
-                                                                Property="MinHeight"
-                                                                Value="24"/>
-                                                    </Trigger>
-                                                    <Trigger Property="IsEnabled"
-                                                             Value="False">
-                                                        <Setter Property="Foreground"
-                                                                Value="#64748B"/>
-                                                    </Trigger>
-                                                </ControlTemplate.Triggers>
-                                            </ControlTemplate>
-                                        </ComboBox.Template>
-                                        <ComboBox.ItemContainerStyle>
-                                            <StaticResource ResourceKey="LogsComboBoxItemStyle"/>
-                                        </ComboBox.ItemContainerStyle>
+                                              Style="{StaticResource App.ComboBoxStyle}">
                                         <ComboBox.ItemTemplate>
                                             <DataTemplate>
                                                 <TextBlock>
